--- a/scrap-immo-api/package.json
+++ b/scrap-immo-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node $NODE_DEBUG_OPTION index.js",
+    "start": "node index.js",
+    "start:debug": "node $NODE_DEBUG_OPTION index.js",
     "start:watch": "nodemon $NODE_DEBUG_OPTION",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
