--- a/scrap-immo-web/package.json
+++ b/scrap-immo-web/package.json
@@ -3,21 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start":"npm run serve",
+    "start": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "vue": "^2.5.16",
-    "vuetify": "^1.0.18",
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
+    "axios": "^0.18.0",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-template-compiler": "^2.5.16",
+    "vuetify": "^1.0.18"
   },
   "eslintConfig": {
     "root": true,
@@ -29,7 +30,7 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console":"off"
+      "no-console": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
