--- a/scrap-immo-web/package.json
+++ b/scrap-immo-web/package.json
@@ -13,6 +13,7 @@
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
     "axios": "^0.18.0",
+    "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
